sql/item_sum.cc
@@ -1937,6 +1937,7 @@ Item_func_group_concat::fix_fields(THD *thd, TABLE_LIST *tables, Item **ref)
                         args, arg_count, MY_COLL_ALLOW_CONV))
     return 1;
 
+  result.set_charset(collation.collation);
   result_field= 0;
   null_value= 1;
   max_length= group_concat_max_len;
